sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def coktailSort() {
^AlgCocktailSort1:2: error: expected class or object definition
def coktailSort() {
^