sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def coktailSort() {
  var longueur = getNombreValeurs()
  var trier = true
  
  while(trier){
    trier = false
    
    //1ere boucle
    for (i <- 0 to longueur -2){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        trier = true
      }
    }
    
    //2e boucle
    for (i <- longueur -2 to 0){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        trier = true
      }
      
  }
  
}